--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,17 @@
 is:
   keycloak:
     admin:
-      user: admin
-      password: admin
+      user: initial1
+      password: 1234
 server:
   port: 8888
 
 # Keycloak settings
 keycloak:
-  realm: PowerRanger
-  auth-server-url: http://localhost:8080/auth
+  realm: SpringBootKeycloak
+  auth-server-url: http://localhost:8180/auth
   ssl-required: none
-  resource: springboot-keycloak
+  resource: login-app
   use-resource-role-mappings: true
   bearer-only: true
   cors: true
@@ -25,7 +25,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/account?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta&useSSL=false&allowPublicKeyRetrieval=True
     username: root
-    password: root
+    password:
   jpa:
     hibernate:
       ddl-auto: create-drop
